# Warehouse_Drone_EYRC_2025_HARDWARE

./: controller.py  pico_controller (1).py  pico_controller.py
swift_pico_hw/: CMakeLists.txt  package.xml
swift_pico_hw/launch/: task_4a.launch.py  task_4a_submission.launch.py
swift_pico_hw/src/: pico_client.py  pico_controller.py  pico_server.py  waypoint_service.py
waypoint_navigation/: CMakeLists.txt  package.xml
waypoint_navigation/action/: NavToWaypoint.action
waypoint_navigation/srv/: GetWaypoints.srv
whycon/: CMakeLists.txt  package.xml
whycon/launch/: Untitled-1.py  usb_cam_launch.py  whycon_only_launch.py
